# rust-demo

./: .taplo.toml  Cargo.toml  clippy.toml  justfile  rust-toolchain.toml
crates/c1/: Cargo.toml
