[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors       = ["ityuany"]
categories    = ["bundler", "development-tools", "web-programming"]
documentation = "https://github.com/ityuany/rust-demo"
edition       = "2024"
homepage      = "https://github.com/ityuany/rust-demo"
license       = "MIT"
repository    = "https://github.com/ityuany/rust-demo"
version       = "0.1.0"


[workspace.dependencies]
