[package]
authors.workspace       = true
categories.workspace    = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "c1"
repository.workspace    = true
version.workspace       = true

[dependencies]
